--- a/src/arduino/Makefile
+++ b/src/arduino/Makefile
@@ -2,27 +2,46 @@
 # Author: Chandler Scott
 # Description: 
 # Makefile for building all Arduino projects including direct library compilation
-
 CC = avr-gcc
 CFLAGS = -Os -DF_CPU=16000000UL -mmcu=atmega328p
-LIB_INC = ../lib/inc
+LIB_INC = ../lib/inc  # Include the parent directory of the library header files
 LIB_SRC = $(wildcard ../lib/src/*.c)
+ARDUINO_INC = inc
+PROJECTS_DIR = projects
 
-.PHONY: all projects clean
+# Define all projects
+PROJECTS = $(wildcard $(PROJECTS_DIR)/*)
 
-all: libs projects
+# Object files directory
+OBJ_DIR = obj
 
-libs:
-	$(CC) $(CFLAGS) -I$(LIB_INC) -c $(LIB_SRC)
+# Compile all source files in LIB_SRC and OBJ_DIR
+LIB_OBJ := $(patsubst ../lib/src/%.c,$(OBJ_DIR)/lib/%.o,$(LIB_SRC))
 
-projects:
-	for dir in projects/*; do \
-	  $(MAKE) -C $$dir; \
-	done
+# Include dependency files
+-include $(LIB_OBJ:.o=.d)
+
+.PHONY: all clean
+
+all: $(LIB_OBJ) $(PROJECTS)
+
+tidy:
+	rm -rf $(OBJ_DIR)
+
+# Compile libraries
+$(OBJ_DIR)/lib/%.o: ../lib/src/%.c
+	@mkdir -p $(@D)
+	$(CC) $(CFLAGS) -I$(ARDUINO_INC) -I$(LIB_INC) -MMD -MP -c $< -o $@
+
+# Build each project
+$(PROJECTS): $(LIB_OBJ)
+	$(MAKE) -C $@
+	@$(MAKE) tidy
+
 
 clean:
-	rm -f *.o
-	for dir in projects/*; do \
-	  $(MAKE) -C $$dir clean; \
+	rm -rf $(OBJ_DIR)/*
+	for dir in $(PROJECTS); do \
+		$(MAKE) -C $$dir clean; \
 	done
 
